--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
+    "moment": "^2.17.1",
     "request": "^2.83.0"
   }
 }
